# spcx-chain-dynamic-decision

./: .gitignore  LICENSE  PRINCIPLES.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: decision-protocol.md  evidence-pack-schema.md  position-sizing.md
examples/spcx-chain/: SKILL.md
examples/spcx-chain/examples/: SPCX_prior_thesis_skeleton.md
examples/spcx-chain/references/: decision-protocol.md  evidence-pack-schema.md  runtime-integration.md
examples/spcx-chain/scripts/: spcx_decision_pack.py
references/: decision-protocol.md  evidence-pack-schema.md  runtime-integration.md
scripts/: build_webreport_data.py  collect_evidence_pack.py
src/ecd/: __init__.py  evidence_pack.py  freshness.py  position_sizing.py
tests/: test_evidence_pack.py  test_freshness.py  test_position_sizing.py  test_spcx_pack_smoke.py  test_webreport_contract.py  test_webreport_pagecount.py  test_webreport_polymarket.py  test_webreport_render.py
webreport/: README.md  REPORT_SCHEMA.md  enrich.py  polymarket.py  render.py
webreport/sample/: decision_sample.json
webreport/template/: index.html  render.js  style.css  tree.js
webreport/template/fonts/: README.md
